tests/ui/suggestions/suggest-pin-macro.stderr
error[E0277]: `PhantomPinned` cannot be unpinned
  --> $DIR/suggest-pin-macro.rs:22:17
   |
LL |     dummy(test1.get_mut());
   |                 ^^^^^^^ within `Test`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required because it appears within the type `Test`
  --> $DIR/suggest-pin-macro.rs:5:8
   |
LL | struct Test {
   |        ^^^^
note: required by a bound in `Pin::<&'a mut T>::get_mut`
  --> $SRC_DIR/core/src/pin.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
